objects/COS_Static_Content__c.object
<CustomObject>
    <fields>
        <fullName>COS_Community__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>COS Community</label>
        <referenceTo>COS_Community__c</referenceTo>
        <relationshipLabel>COS Static Contents</relationshipLabel>
        <relationshipName>COS_Static_Contents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cadence_Platform__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cadence Platform</label>
        <referenceTo>Cadence_Platform__c</referenceTo>
        <relationshipLabel>COS Static Contents</relationshipLabel>
        <relationshipName>COS_Static_Contents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Html_Content__c</fullName>
        <label>Html Content</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Japanese_Content__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Japanese Content</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Class</label>
        <referenceTo>Product_Class__c</referenceTo>
        <relationshipLabel>COS Static Contents</relationshipLabel>
        <relationshipName>COS_Static_Contents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Getting Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COS Community</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>COS Static Content</label>
    <nameField>
        <displayFormat>SC-{0000000}</displayFormat>
        <label>COS Static Content Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>COS Static Contents</pluralLabel>
    <recordTypes>
        <fullName>COS_Community</fullName>
        <active>true</active>
        <label>COS Community</label>
    </recordTypes>
    <recordTypes>
        <fullName>Getting_Started</fullName>
        <active>true</active>
        <label>Getting Started</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Content</fullName>
        <active>true</active>
        <label>Product Content</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>